// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldLevelHelp allows to specify mode content and close 1`] = `
<div>
  <label>
    Port Number
  </label>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="pficon pficon-info"
    />
  </button>
</div>
`;

exports[`FieldLevelHelp renders properly 1`] = `
<button
  className="btn btn-link"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    aria-hidden="true"
    className="pficon pficon-info"
  />
</button>
`;
